--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="icon114-114.png" rel="apple-touch-icon-precomposed">
     <!-- 禁止缩放 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-   
-    <title>Berri</title>
+    <meta name="keywords" content="郝博宇,berri,个人简历,前端设计师,html,html5,html5+css3,javascript,jquery,web,响应式,web前端工程师,ui设计师,18612233170">
+    <title>郝博宇 前端工程师</title>
     <link href="css/berri.css" rel="stylesheet" type="text/css">
 
     <!--[if lt IE 9]>
@@ -72,8 +72,10 @@
 		<h2 id="about_title">个人简介</h2>
 		<span class="mac" id="mac"><img src="img/mac.png" alt="" class="full"></span>
 		<div class="about-info" id="about_info">
-			<p>大家好，我叫郝博宇，大家可叫我小宇或小郝。我来自美丽的雪城。</p>
-			<p>我是一名前端工程师(主要方向)和UI设计师，10年初参加IT工作。</p>
+			<p>我叫郝博宇（berri），来自美丽的雪城牡丹江！</p>
+			<p>我主要从事前端工作，性格外向，有良好的人际交往能力，具备相关的专业知识，对待工作细心、耐心，适应新环境能力比较强。</p>
+			<p>我的人生格言：拐杖永远取代不了有力的双脚！</p>
+		</div>
 		</div>
 	</div>
 	<!-- about end -->
@@ -203,7 +205,7 @@
 
 <footer>
 	<article id="footer_bus">
-		<span>联系方式：18612233170</span><span>邮箱：haoboyu40@qq.com</span>
+		<div><span>联系方式：18612233170</span><span>邮箱：haoboyu40@qq.com</span></div>
 		<img src="img/bus.png" alt="" class="bus"/>
 	</article>
 </footer>
