--- a/index.html
+++ b/index.html
@@ -134,32 +134,29 @@
 			<li class="exp-list-1">
 				<span class="border-radius">1</span>
 				<div class="work-info">
-					<p>2010-03 至 2011-05  万色品尚</p>
-					<p>工作职责：主要工作有，配合产品经理完成商城网站原型图设计及ui设计工作，根据设计图用html+css输出静态页面，
-					用js插件完成网页动态特效，检查网站兼容性问题，网站上线以后制作Banner图和相关图片，维护网站
-					html+css代码，防止网站bug出现。</p>
+					<p>2014-10 至今  君德时代</p>
+					<p>主要工作：根据产品要求及效果图，运用html+css+javascript及bootstrap相关框架制作前端页面，及相关专题页面。主要负责项目有微金客平台（pc+移动），财富360平台（pc+移动），君德汇富平台等相关平台管理制作。</p>
 				</div>
 			</li>
 			<li class="exp-list-2">
 				<span class="border-radius">2</span>
 				<div class="work-info">
-					<p>2011-05 至 2013-01 英耐乐奇</p>
-					<p>工作职责：主要工作有，参加各个国内外项目的前端制作。根据UI设计师的图。制作完成相应页面。配合小组程序人员完成上线。</p>
+					<p>2013-03 至 2014-09  威莎鄂尔</p>
+					<p>主要工作：负责产品、UI设计与前端。根据公司需求，设计该项目的产品原型图，审核通过以后制作Ui效果图，根据效果图制作完成前端页面，主要制作的项目有：1、威莎鄂尔（美容整形平台）2、疤博士 3、泽晟堂(北京)医学研究院 4.一龄博士平台5、移动端健康管理制作 6、移动端美丽订制平台 7、移动端内部管理平台。</p>
 				</div>
 			</li>
 			<li class="exp-list-3">
 				<span class="border-radius">3</span>
 				<div class="work-info">
-					<p>2013-03 至 2014-09  威莎鄂尔</p>
-					<p>工作职责：产品经理，UI设计，与前端制作。根据公司需求，设计该项目的产品原型图，审核通过以后制作Ui效果图，根据效果图制作完成前端页面，主要制作的项目有：1、威莎鄂尔（美容整形平台）2、疤博士 3、泽晟堂(北京)医学研究院 4.一龄博士平台5、移动端健康管理制作 6、移动端美丽订制平台 7、移动端内部管理平台。</p>
+					<p>2011-05 至 2013-01 英耐乐奇</p>
+					<p>主要工作：参加各个国内外项目的前端制作。根据UI设计设计图，用html+css+javascript制作完成相应页面。配合各个小组程序人员完成上线。</p>
 				</div>
 			</li>
 			<li class="exp-list-4">
 				<span class="border-radius">4</span>
 				<div class="work-info">
-					<p>2014-10 至今  君德时代</p>
-					<p>工作职责：主要负责工作，根据产品要求及效果图运用html+css+javascript制作前端页面。及相关专题页面。主要负责项目有
-				微金客平台（pc+移动），财富360平台（pc+移动），君德汇富平台等相关平台管理制作。</p>
+					<p>2010-03 至 2011-05  万色品尚</p>
+					<p>主要工作：配合产品经理完成商城网站原型图设计及ui设计工作，根据设计图用html+css输出静态页面，用js插件完成网页动态特效，检查网站兼容性问题，网站上线以后制作Banner图和相关图片，维护网站html+css代码，防止网站bug出现。</p>
 				</div>
 			</li>
 		</ul>
