--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="renderer" content="webkit" />
-    <!--允许全屏-->
-    <meta content="yes" name="apple-mobile-web-app-capable" />
-    <meta content="telephone=no,email=no" name="format-detection" />    
-    <link href="icon114-114.png" rel="apple-touch-icon-precomposed">
-    <!-- 禁止缩放 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <meta name="keywords" content="郝博宇,berri,个人简历,前端设计师,html,html5,html5+css3,javascript,jquery,web,响应式,web前端工程师,ui设计师,18612233170">
+    <meta name="format-detection" content="email=no" />
+
     <title>郝博宇 前端工程师</title>
     <link href="css/berri.css" rel="stylesheet" type="text/css">
 
