--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 		<div>
 			<p class="item-info-1">中文姓名：郝博宇</p>
 			<p class="item-info-2">出生日期：1988-08-21</p>
-			<p class="item-info-3">联系方式：18612233170</p>
-			<p class="item-info-4">工作经验：5年以上</p>
+			<p class="item-info-3">联系方式：18561264311 15652039675</p>
+			<p class="item-info-4">工作经验：6年以上</p>
 			<p class="item-info-5">工作职位：前端工程师，UI设计师</p>
 			<p class="item-info-6">邮箱地址：haoboyu40@qq.com</p>
 		</div>
@@ -131,28 +131,70 @@
 			<li class="exp-list-1">
 				<span class="border-radius">1</span>
 				<div class="work-info">
-					<p>2014-10 至今  君德时代</p>
-					<p>主要工作：根据产品要求及效果图，运用html+css+javascript及bootstrap相关框架制作前端页面，及相关专题页面。主要负责项目有微金客平台（pc+移动），财富360平台（pc+移动），君德汇富平台等相关平台管理制作。</p>
+					<p>2016-5 至今  北京车行纵横信息技术有限公司</p>
+					<p>公司是由原58同城副总裁徐贵鹏创建，公司性质：二手车行业提供资本运作、管理输出；</p>
+					<p>我负责三个角色，产品经理、UI设计、前端工程师，主要项目有二手车系统管理平台、微信二手车导购系统、二手车商城等相关项目；在这些中我主要负责的职责如下：</p>
+					<p> 1、项目产品规划，制作产品规划原型图、产品相关文档。<br>
+						2、与java工程师协调项目功能制作。<br>
+						3、根据产品原型图设计相关页面效果图。<br>
+						4、根据页面效果图 用html5+css3+JavaScript制作动态页面。<br>
+						5、后期与java工程师协调修改，功能及bug。<br>
+						6、项目测试验收
+					</p>
+				</div>
+			</li>
+			<li class="exp-list-1">
+				<span class="border-radius">2</span>
+				<div class="work-info">
+					<p>2014-10 至 2016-05 北京君德时代投资控股集团</p>
+					<p>我负责角色是高级前端工程师职位;</p>
+					<p>一、我主要负责项目如下：</p>
+					<p>1、微金客平台（pc+移动）。
+					2、财富360平台（pc+移动）。
+					3、君德汇富平台。
+					4、集团下属公司相关网站。
+					5、微金客平台相关活动专题页面。</p>
+					<p>二、主要负责工作如下：</p>
+					<p>1、根据ui设计提供的效果图、切图制作相关动态页面（html5+css3+JavaScript）
+					2、与相关项目后台工程师协调配合新添修改相关页面及处理相关bug。
+					3、与产品和其他人员沟通配合，制作相关项目前端规范。
+					4、与运营人员和市场人员配合制作相关活动专题</p>
 				</div>
 			</li>
 			<li class="exp-list-2">
-				<span class="border-radius">2</span>
+				<span class="border-radius">3</span>
 				<div class="work-info">
-					<p>2013-03 至 2014-09  威莎鄂尔</p>
-					<p>主要工作：负责产品、UI设计与前端。根据公司需求，设计该项目的产品原型图，审核通过以后制作Ui效果图，根据效果图制作完成前端页面，主要制作的项目有：1、威莎鄂尔（美容整形平台）2、疤博士 3、泽晟堂(北京)医学研究院 4.一龄博士平台5、移动端健康管理制作 6、移动端美丽订制平台 7、移动端内部管理平台。</p>
+					<p>2013-03 至 2014-09  北京威莎鄂尔国际美容集团股份有限公司</p>
+					<p>一、我负责三个角色，产品经理、前端工程师，主要负责项目如下：</p>
+					<p>1、威莎鄂尔（美容整形平台）
+					2、疤博士 
+					3、泽晟堂(北京)医学研究院 
+					4、一龄博士平台
+					5、移动端健康管理制作 
+					6、移动端美丽订制平台 
+					7、移动端内部管理平台。</p>
+					<p>二、在每个项目中我主要职责如下：</p>
+					<p>1、根据产品需求，对市场做相关调研，了解用户对产品需要的调研、根据调研结果，整理制作相关文档。与项目相关人员协调制作功能原型图。
+					2、协调UI人员根据原型图制作效果图（部分有我设计）；
+					3、根据页面效果图制作动态页面。
+					4、与相关后台工程师协调功能制作及迭代开发
+					5、后期与java工程师协调修改，功能及bug。
+					6、项目测试验收及上线</p>
 				</div>
 			</li>
 			<li class="exp-list-3">
-				<span class="border-radius">3</span>
+				<span class="border-radius">4</span>
 				<div class="work-info">
-					<p>2011-05 至 2013-01 英耐乐奇</p>
-					<p>主要工作：参加各个国内外项目的前端制作。根据UI设计设计图，用html+css+javascript制作完成相应页面。配合各个小组程序人员完成上线。</p>
+					<p>2011-05 至 2013-01 北京英耐乐奇信息技术有限</p>
+					<p>我的职位是前端工程师，主要参加各个国内外项目的前端制作。</p>
+					<p>主要负责项目：1、国外购物商城 （5个）2、国外订餐网站3、国外社交网站4、国内短租网5、国外家具网站
+6、汽车购物网站等相关项目</p>
 				</div>
 			</li>
 			<li class="exp-list-4">
-				<span class="border-radius">4</span>
+				<span class="border-radius">5</span>
 				<div class="work-info">
-					<p>2010-03 至 2011-05  万色品尚</p>
+					<p>2010-03 至 2011-05  青岛万色品尚网络科技有限公司</p>
 					<p>主要工作：配合产品经理完成商城网站原型图设计及ui设计工作，根据设计图用html+css输出静态页面，用js插件完成网页动态特效，检查网站兼容性问题，网站上线以后制作Banner图和相关图片，维护网站html+css代码，防止网站bug出现。</p>
 				</div>
 			</li>
@@ -199,7 +241,7 @@
 
 <footer>
 	<article id="footer_bus">
-		<div><span>联系方式：18612233170</span><span>邮箱：haoboyu40@qq.com</span></div>
+		<div><span>联系方式：18561264311</span><span>邮箱：haoboyu40@qq.com</span></div>
 		<img src="img/bus.png" alt="" class="bus"/>
 	</article>
 </footer>
