--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 				<h2 id="progress_title">技能熟练度</h2>
 
 				<div class="progress-ring" data-percent="85" data-color="#031427,#ff0000" data-duration="2">
-					<span class="name">HTML</span>
+					<span class="name">HTML5+CSS3</span>
 				</div>
-				<div class="progress-ring" data-percent="85" data-color="#031427,#14fef0" data-duration="2">
-					<span class="name">CSS</span>
+				<div class="progress-ring" data-percent="50" data-color="#031427,#14fef0" data-duration="2">
+					<span class="name">VUE</span>
 				</div>
 				<div class="progress-ring" data-percent="60" data-color="#031427,#fff45c" data-duration="2">
 					<span class="name">JAVASCRIPT</span>
@@ -132,7 +132,7 @@
 				<span class="border-radius">1</span>
 				<div class="work-info">
 					<p>2016-5 至今  北京车行纵横信息技术有限公司</p>
-					<p>公司是由原58同城副总裁徐贵鹏创建，公司性质：二手车行业提供资本运作、管理输出；</p>
+					<p>公司性质：二手车行业提供资本运作、管理输出；</p>
 					<p>我负责三个角色，产品经理、UI设计、前端工程师，主要项目有二手车系统管理平台、微信二手车导购系统、二手车商城等相关项目；在这些中我主要负责的职责如下：</p>
 					<p> 1、项目产品规划，制作产品规划原型图、产品相关文档。<br>
 						2、与java工程师协调项目功能制作。<br>
